--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         
             <header>
                 <a href="#" class="welcome">
-                    <img src=".\images\restaurants\logo_ohmyfood.svg" alt="logo Ohmyfood">
+                    <img src=".\images\restaurants\logo_ohmyfood.svg" alt="logo Ohmyfood"/>
                 </a>
             </header>
 
@@ -83,7 +83,7 @@
                         <article>
                             <a href="menu1.html">
                                     <img src=".\images\restaurants\restaurant_palette.jpg" 
-                                    alt="Assiette garnie sur table de restaurant, menu et verre à pied">
+                                    alt="Assiette garnie sur table de restaurant, menu et verre à pied"/>
                                         <span class="primary-content__new">Nouveau</span>
                                             <div class="primary-content__info">
                                                 <h4>La Palette Du Goût</h4>
@@ -103,7 +103,7 @@
                         <article>
                             <a href="menu2.html">
                                     <img src=".\images\restaurants\restaurant_note.jpg" 
-                                    alt="Assiette garnie sur table de restaurant, menu et verre à pied">
+                                    alt="Assiette garnie sur table de restaurant, menu et verre à pied"/>
                                         <span class="primary-content__new">Nouveau</span>
                                             <div class="primary-content__info">
                                                 <h4>La Note Enchantée</h4>
@@ -123,7 +123,7 @@
                         <article>
                             <a href="menu3.html">
                                     <img src=".\images\restaurants\restaurant_française.jpg" 
-                                    alt="Assiette garnie sur table de restaurant">
+                                    alt="Assiette garnie sur table de restaurant"/>
                                         <div class="primary-content__info">
                                             <h4>À La Française</h4>
                                             <p>Cité Rouge</p>
@@ -142,7 +142,7 @@
                         <article>
                             <a href="menu4.html">
                                     <img src=".\images\restaurants\restaurant_délice.jpg" 
-                                    alt="Plats garnis sur table de restaurant">
+                                    alt="Plats garnis sur table de restaurant"/>
                                     <div class="primary-content__info">
                                         <h4>Le Délice Des Sens</h4>
                                         <p>Folie-Méricourt</p>
@@ -178,6 +178,7 @@
                                 <i class="fa-li fa fa-envelope" aria-hidden="true"></i>      
                                     <a href="mailto:hello@openclassrooms.com">Contact</a>
                             </li>
+                        </ul>
                 </footer>
         </body>
 </html>
