--- a/menu1.html
+++ b/menu1.html
@@ -22,13 +22,13 @@
                         <a href="index.html">
                             <i class="fa fa-arrow-left"></i>
                         </a>
-                        <img src=".\images\restaurants\logo_ohmyfood.svg" alt="logo Ohmyfood">
+                        <img src="images\restaurants\logo_ohmyfood.svg" alt="logo Ohmyfood"/>
                 </header>
 
                 <main>
-                    <img src=".\images\restaurants\restaurant_palette.jpg" 
+                    <img src="images\restaurants\restaurant_palette.jpg" 
                     alt="Assiette garnie sur table de restaurant, menu et verre à pied">
-                        <span class="title">
+                        <div class="title">
                             <h1>La Palette Du Goût</h1>
                                 <div class="heart">
                                     <span class="heart__checked">
@@ -38,7 +38,7 @@
                                         <i class="far fa-heart fa-2x"></i>
                                     </span>
                                 </div>
-                        </span>
+                        </div>
                 </main>
 
                 <div class="container">
@@ -51,7 +51,7 @@
                             <div class="content__wrapper">
                                         <h4>Fricassée d'escargots</h4>
                                             <div class="content__price">
-                                                <p>Au piment d'Espelette</p></span>
+                                                <p>Au piment d'Espelette</p>
                                                 <p>25€</p>
                                             </div>
                                                         <i class="fas fa-check-circle fa-2x"></i>
@@ -186,6 +186,7 @@
                                 <i class="fa-li fa fa-envelope" aria-hidden="true"></i>      
                                     <a href="mailto:hello@openclassrooms.com">Contact</a>
                             </li>
+                        </ul>
                 </footer>
 
         </body>
