--- a/menu3.html
+++ b/menu3.html
@@ -28,7 +28,7 @@
             <main>
                 <img src="./images\restaurants\restaurant_française.jpg" 
                 alt="Assiette garnie sur table de restaurant, menu et verre à pied">
-                    <span class="title">
+                    <div class="title">
                         <h1>À La Française</h1>
                             <div class="heart">
                                 <span class="heart__checked">
@@ -38,7 +38,7 @@
                                     <i class="far fa-heart fa-2x"></i>
                                 </span>
                             </div>
-                    </span>
+                    </div>
             </main>
 
         <div class="container">
@@ -187,7 +187,7 @@
                         <i class="fa-li fa fa-envelope" aria-hidden="true"></i>      
                             <a href="mailto:hello@openclassrooms.com">Contact</a>
                     </li>
-                </div>
+                </ul>
         </footer>
 
         </body>
