--- a/menu1.html
+++ b/menu1.html
@@ -6,13 +6,13 @@
             <meta name="description" content="Menu du restaurant, La Palette Du Goût. OhMyFood, entreprise de commande de repas en ligne, 
             nous proposons à nos clients les menus de restaurants gastronomiques."/>
             <meta name="author" content="Narjis Cotonnec"/>
-            <link rel="stylesheet" href="style.css" type="text/css"> 
+            <link rel="stylesheet" href="./sass/style.css" type="text/css"> 
             <link rel="preconnect" href="https://fonts.gstatic.com"> 
             <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;900&display=swap" rel="stylesheet"> 
             <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
             <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
             <script src="https://kit.fontawesome.com/bcad5a07b6.js" crossorigin="anonymous"></script>
-            <link rel="icon" type="image/svg" sizes="16x16" href="./images/restaurants/logo_ohmyfood.svg"/>
+            <link rel="icon" type="image/svg" sizes="16x16" href="./images/restaurants/logo_ohmyfood.svg">
                 <title>Ohmyfood</title>
         </head>
 
@@ -22,11 +22,11 @@
                         <a href="index.html">
                             <i class="fa fa-arrow-left"></i>
                         </a>
-                        <img src="images\restaurants\logo_ohmyfood.svg" alt="logo Ohmyfood"/>
+                        <img src="./images/restaurants/logo_ohmyfood.svg" alt="logo Ohmyfood">
                 </header>
 
                 <main>
-                    <img src="images\restaurants\restaurant_palette.jpg" 
+                    <img src="images/restaurants/restaurant_palette.jpg" 
                     alt="Assiette garnie sur table de restaurant, menu et verre à pied">
                         <div class="title">
                             <h1>La Palette Du Goût</h1>
