--- a/menu2.html
+++ b/menu2.html
@@ -12,7 +12,7 @@
             <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet"> 
             <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
             <script src="https://kit.fontawesome.com/bcad5a07b6.js" crossorigin="anonymous"></script>
-            <link rel="icon" type="image/svg" sizes="16x16" href="./images/restaurants/logo_ohmyfood.svg"/>
+            <link rel="icon" type="image/svg" sizes="16x16" href="./images/restaurants/logo_ohmyfood.svg">
                 <title>Ohmyfood</title>
         </head>
 
@@ -22,12 +22,12 @@
                 <a href="index.html">
                     <i class="fa fa-arrow-left"></i>
                 </a>
-                <img src=".\images\restaurants\logo_ohmyfood.svg" alt="logo Ohmyfood"/>
+                <img src="./images/restaurants/logo_ohmyfood.svg" alt="logo Ohmyfood">
             </header>
 
             <main>
-                <img src="./images\restaurants\restaurant_note.jpg" 
-                alt="Assiette garnie sur table de restaurant, menu et verre à pied"/>
+                <img src="./images/restaurants/restaurant_note.jpg" 
+                alt="Assiette garnie sur table de restaurant, menu et verre à pied">
                     <div class="title">
                         <h1>La Note Enchantée</h1>
                         <div class="heart">
