--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 
                 <div class="introduction__present">
                     <h1>Réservez le menu qui vous convient</h1>
-                        <p>Découvrez des restaurants d'exeption, selectionnés par nos soins</p>
+                        <p>Découvrez des restaurants d'exception, selectionnés par nos soins</p>
                     <button class="bouton__explore">Explorer nos restaurants</button>
                 </div>
             
