--- a/menu2.html
+++ b/menu2.html
@@ -6,7 +6,7 @@
             <meta name="description" content="Menu du restaurant, La Note Enchantée. OhMyFood, entreprise de commande de repas en ligne, 
             nous proposons à nos clients les menus de restaurants gastronomiques."/>
             <meta name="author" content="Narjis Cotonnec"/>
-            <link rel="stylesheet" href="style.css" type="text/css"> 
+            <link rel="stylesheet" href="./sass/style.css" type="text/css"> 
             <link rel="preconnect" href="https://fonts.gstatic.com"> 
             <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;900&display=swap" rel="stylesheet"> 
             <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet"> 
@@ -174,7 +174,7 @@
 
             <span class="container__command">
                 <button class="bouton__explore">
-                Commander
+                    Commander
                 </button>
             </span>
         </div>
