--- a/menu2.html
+++ b/menu2.html
@@ -1,274 +1,209 @@
 <!DOCTYPE html>
-    <html lang="fr-FR">
+<html lang="fr-FR">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Menu du restaurant, La Note Enchantée. OhMyFood, entreprise de commande de repas en ligne, 
+                    nous proposons à nos clients les menus de restaurants gastronomiques."/>
+    <meta name="author" content="Narjis Cotonnec" />
+    <link rel="stylesheet" href="./sass/style.css" type="text/css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;900&display=swap"
+      rel="stylesheet"/>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap"
+      rel="stylesheet"/>
+    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css" />
+    <script
+      src="https://kit.fontawesome.com/bcad5a07b6.js"
+      crossorigin="anonymous">
+    </script>
+    <link
+      rel="icon"
+      type="image/svg"
+      sizes="16x16"
+      href="./images/restaurants/logo_ohmyfood.svg" />
+    <title>Ohmyfood</title>
+  </head>
 
-        <head>
-            <meta charset="utf-8" />
-            <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-            <meta name="description" content="Menu du restaurant, La Note Enchantée. OhMyFood, entreprise de commande de repas en ligne, 
-                    nous proposons à nos clients les menus de restaurants gastronomiques." />
-            <meta name="author" content="Narjis Cotonnec" />
-            <link rel="stylesheet" href="./sass/style.css" type="text/css">
-            <link rel="preconnect" href="https://fonts.gstatic.com">
-            <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;900&display=swap" rel="stylesheet">
-            <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-            <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
-            <script src="https://kit.fontawesome.com/bcad5a07b6.js" crossorigin="anonymous"></script>
-            <link rel="icon" type="image/svg" sizes="16x16" href="./images/restaurants/logo_ohmyfood.svg">
-                <title>
-                    Ohmyfood
-                </title>
-        </head>
+  <body>
+    <header class="pages">
+      <a href="index.html">
+        <i class="fa fa-arrow-left"></i>
+      </a>
+      <img src="./images/restaurants/logo_ohmyfood.svg" alt="logo Ohmyfood" />
+    </header>
 
-        <body>
+    <main>
+      <img
+        src="./images/restaurants/restaurant_note.jpg"
+        alt="Assiette garnie sur table de restaurant, menu et verre à pied" />
+      <div class="title">
+        <h1>La Note Enchantée</h1>
+        <div class="heart">
+          <span class="heart__checked">
+            <i class="fas fa-heart fa-2x"></i>
+          </span>
+          <span class="heart__unchecked">
+            <i class="far fa-heart fa-2x"></i>
+          </span>
+        </div>
+      </div>
+    </main>
 
-            <header class="pages">
-                <a href="index.html">
-                    <i class="fa fa-arrow-left"></i>
-                </a>
-                    <img src="./images/restaurants/logo_ohmyfood.svg" alt="logo Ohmyfood">
-            </header>
+    <div class="container">
+      <div class="content">
+        <h3 class="content__uppercase"><u>Entr</u>ées</h3>
 
-            <main>
-                <img src="./images/restaurants/restaurant_note.jpg"
-                    alt="Assiette garnie sur table de restaurant, menu et verre à pied">
-                        <div class="title">
-                            <h1>
-                                La Note Enchantée
-                            </h1>
-                                <div class="heart">
-                                    <span class="heart__checked">
-                                        <i class="fas fa-heart fa-2x"></i>
-                                    </span>
-                                    <span class="heart__unchecked">
-                                        <i class="far fa-heart fa-2x"></i>
-                                    </span>
-                                </div>
-                        </div>
-            </main>
-
-            <div class="container">
-                <div class="content">
-                    <h3 class="content__uppercase">
-                        <u>Entr</u>ées
-                    </h3>
-
-                        <div class="content__setmenu">
-                            <div class="content__wrapper">
-                                <h4>
-                                    Ravioles de foie gras
-                                </h4>
-                                    <div class="content__price">
-                                        <p>
-                                            Accompagnées de leur crème à la truffe
-                                        </p>
-                                        <p>
-                                            25€
-                                        </p>
-                                    </div>
-                                        <i class="fas fa-check-circle fa-2x"></i>
-                            </div>
-                        </div>
-
-                        <div class="content__setmenu">
-                            <div class="content__wrapper">
-                                <h4>
-                                    Caviar osciètre
-                                </h4>
-                                    <div class="content__price">
-                                        <p>
-                                            Sur blini à la farine de blé noir
-                                        </p>
-                                        <p>
-                                            35€
-                                        </p>
-                                    </div>
-                                        <i class="fas fa-check-circle fa-2x"></i>
-                            </div>
-                        </div>
-
-                        <div class="content__setmenu">
-                            <div class="content__wrapper">
-                                <h4>
-                                    Homard et espuma de potiron
-                                </h4>
-                                    <div class="content__price">
-                                        <p>
-                                            Mariné aux zestes d'orange
-                                        </p>
-                                        <p>
-                                            20€
-                                        </p>
-                                    </div>
-                                        <i class="fas fa-check-circle fa-2x"></i>
-                            </div>
-                        </div>
-
-                        <div class="content__setmenu">
-                            <div class="content__wrapper">
-                                <h4>
-                                    Foie gras de canard cuit entier
-                                </h4>
-                                    <div class="content__price">
-                                        <p>
-                                            Confiture de figues et pain toasté
-                                        </p>
-                                        <p>
-                                            35€
-                                        </p>
-                                    </div>
-                                        <i class="fas fa-check-circle fa-2x"></i>
-                            </div>
-                        </div>
-                </div>
-
-                <div class="content">
-                    <h3 class="content__uppercase">
-                        <u>Plat</u>s
-                    </h3>
-
-                        <div class="content__setmenu">
-                            <div class="content__wrapper">
-                                <h4>
-                                    Noix de coquilles Saint-Jacques
-                                </h4>
-                                    <div class="content__price">
-                                        <p>
-                                            Sur lit de purée de céleri-rave
-                                        </p>
-                                        <p>
-                                            40€
-                                        </p>
-                                    </div>
-                                        <i class="fas fa-check-circle fa-2x"></i>
-                            </div>
-                        </div>
-
-                        <div class="content__setmenu">
-                            <div class="content__wrapper">
-                                <h4>
-                                    Langoustine poêlée
-                                </h4>
-                                    <div class="content__price">
-                                        <p>
-                                            Purée de patate douce
-                                        </p>
-                                        <p>
-                                            35€
-                                        </p>
-                                    </div>
-                                        <i class="fas fa-check-circle fa-2x"></i>
-                            </div>
-                        </div>
-
-                        <div class="content__setmenu">
-                            <div class="content__wrapper">
-                                <h4>
-                                    Mijoté de queue de boeuf
-                                </h4>
-                                    <div class="content__price">
-                                        <p>
-                                            Et riz sauvage aux zestes de citron
-                                        </p>
-                                        <p>
-                                            44€
-                                        </p>
-                                    </div>
-                                        <i class="fas fa-check-circle fa-2x"></i>
-                            </div>
-                        </div>
-                </div>
-
-                <div class="content">
-                    <h3 class="content__uppercase">
-                        <u>Dess</u>erts
-                    </h3>
-
-                        <div class="content__setmenu">
-                            <div class="content__wrapper">
-                                <h4>
-                                    Macaron noisette et chocolat
-                                </h4>
-                                    <div class="content__price">
-                                        <p>
-                                            Glace au caramel brun et sel de Guérande
-                                        </p>
-                                        <p>
-                                            18€
-                                        </p>
-                                    </div>
-                                        <i class="fas fa-check-circle fa-2x"></i>
-                            </div>
-                        </div>
-
-                        <div class="content__setmenu">
-                            <div class="content__wrapper">
-                                <h4>
-                                    Baba au rhum revisité
-                                </h4>
-                                    <div class="content__price">
-                                        <p>
-                                            Avec son coulis de citron
-                                        </p>
-                                        <p>
-                                            22€
-                                        </p>
-                                    </div>
-                                        <i class="fas fa-check-circle fa-2x"></i>
-                            </div>
-                        </div>
-
-                        <div class="content__setmenu">
-                            <div class="content__wrapper">
-                                <h4>
-                                    Tarte au citron meringuée
-                                </h4>
-                                    <div class="content__price">
-                                        <p>
-                                            Déstructurée
-                                        </p>
-                                        <p>
-                                            23€
-                                        </p>
-                                    </div>
-                                        <i class="fas fa-check-circle fa-2x"></i>
-                            </div>
-                        </div>
-                </div>
-
-
-                <span class="container__command">
-                    <button class="bouton__explore">
-                        Commander
-                    </button>
-                </span>
+        <div class="content__setmenu">
+          <div class="content__wrapper">
+            <h4>Ravioles de foie gras</h4>
+            <div class="content__price">
+              <p>Accompagnées de leur crème à la truffe</p>
+              <p>25€</p>
             </div>
+            <i class="fas fa-check-circle fa-2x"></i>
+          </div>
+        </div>
 
-            <footer>
-                <h2>
-                    ohmyfood
-                </h2>
+        <div class="content__setmenu">
+          <div class="content__wrapper">
+            <h4>Caviar osciètre</h4>
+            <div class="content__price">
+              <p>Sur blini à la farine de blé noir</p>
+              <p>35€</p>
+            </div>
+            <i class="fas fa-check-circle fa-2x"></i>
+          </div>
+        </div>
 
-                    <ul class="fa-ul">
-                        <li>
-                            <i class="fa-li fa fa-cutlery" aria-hidden="true"></i>
-                                Proposer un restaurant
-                        </li>
-                        <li>
-                            <i class="fa-li fas fa-hands-helping" aria-hidden="true"></i>
-                                Devenir partenaire
-                        </li>
-                        <li>
-                            <i class="fa-li fas fa-file-signature" aria-hidden="true"></i>
-                                Mentions légales
-                        <li>
-                            <i class="fa-li fa fa-envelope" aria-hidden="true"></i>
-                                <a href="mailto:hello@openclassrooms.com">
-                                    Contact
-                                </a>
-                        </li>
-                    </ul>
-            </footer>
+        <div class="content__setmenu">
+          <div class="content__wrapper">
+            <h4>Homard et espuma de potiron</h4>
+            <div class="content__price">
+              <p>Mariné aux zestes d'orange</p>
+              <p>20€</p>
+            </div>
+            <i class="fas fa-check-circle fa-2x"></i>
+          </div>
+        </div>
 
-        </body>
+        <div class="content__setmenu">
+          <div class="content__wrapper">
+            <h4>Foie gras de canard cuit entier</h4>
+            <div class="content__price">
+              <p>Confiture de figues et pain toasté</p>
+              <p>35€</p>
+            </div>
+            <i class="fas fa-check-circle fa-2x"></i>
+          </div>
+        </div>
+      </div>
 
-    </html>
+      <div class="content">
+        <h3 class="content__uppercase"><u>Plat</u>s</h3>
+
+        <div class="content__setmenu">
+          <div class="content__wrapper">
+            <h4>Noix de coquilles Saint-Jacques</h4>
+            <div class="content__price">
+              <p>Sur lit de purée de céleri-rave</p>
+              <p>40€</p>
+            </div>
+            <i class="fas fa-check-circle fa-2x"></i>
+          </div>
+        </div>
+
+        <div class="content__setmenu">
+          <div class="content__wrapper">
+            <h4>Langoustine poêlée</h4>
+            <div class="content__price">
+              <p>Purée de patate douce</p>
+              <p>35€</p>
+            </div>
+            <i class="fas fa-check-circle fa-2x"></i>
+          </div>
+        </div>
+
+        <div class="content__setmenu">
+          <div class="content__wrapper">
+            <h4>Mijoté de queue de boeuf</h4>
+            <div class="content__price">
+              <p>Et riz sauvage aux zestes de citron</p>
+              <p>44€</p>
+            </div>
+            <i class="fas fa-check-circle fa-2x"></i>
+          </div>
+        </div>
+      </div>
+
+      <div class="content">
+        <h3 class="content__uppercase"><u>Dess</u>erts</h3>
+
+        <div class="content__setmenu">
+          <div class="content__wrapper">
+            <h4>Macaron noisette et chocolat</h4>
+            <div class="content__price">
+              <p>Glace au caramel brun et sel de Guérande</p>
+              <p>18€</p>
+            </div>
+            <i class="fas fa-check-circle fa-2x"></i>
+          </div>
+        </div>
+
+        <div class="content__setmenu">
+          <div class="content__wrapper">
+            <h4>Baba au rhum revisité</h4>
+            <div class="content__price">
+              <p>Avec son coulis de citron</p>
+              <p>22€</p>
+            </div>
+            <i class="fas fa-check-circle fa-2x"></i>
+          </div>
+        </div>
+
+        <div class="content__setmenu">
+          <div class="content__wrapper">
+            <h4>Tarte au citron meringuée</h4>
+            <div class="content__price">
+              <p>Déstructurée</p>
+              <p>23€</p>
+            </div>
+            <i class="fas fa-check-circle fa-2x"></i>
+          </div>
+        </div>
+      </div>
+
+      <span class="container__command">
+        <button class="bouton__explore">Commander</button>
+      </span>
+    </div>
+
+    <footer>
+      <h2>ohmyfood</h2>
+
+      <ul class="fa-ul">
+        <li>
+          <i class="fa-li fa fa-cutlery" aria-hidden="true"></i>
+          Proposer un restaurant
+        </li>
+        <li>
+          <i class="fa-li fas fa-hands-helping" aria-hidden="true"></i>
+          Devenir partenaire
+        </li>
+        <li>
+          <i class="fa-li fas fa-file-signature" aria-hidden="true"></i>
+          Mentions légales
+        </li>
+
+        <li>
+          <i class="fa-li fa fa-envelope" aria-hidden="true"></i>
+          <a href="mailto:hello@openclassrooms.com"> Contact </a>
+        </li>
+      </ul>
+    </footer>
+  </body>
+</html>
