--- a/index.html
+++ b/index.html
@@ -1,227 +1,210 @@
 <!DOCTYPE html>
-    <html lang="fr-FR">
+<html lang="fr-FR">
+  <head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta
+      name="description"
+      content="OhMyFood, entreprise de commande de repas en ligne, 
+                    nous proposons à nos clients les menus d'exception de restaurants gastronomiques"/>
+    <meta name="author" content="Narjis Cotonnec" />
+    <link rel="stylesheet" href="./sass/style.css" type="text/css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;900&display=swap"
+      rel="stylesheet"/>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap"
+      rel="stylesheet"/>
+    <link
+      rel="stylesheet"
+      href="./font/font-awesome-4.7.0/css/font-awesome.min.css"/>
+    <script
+      src="https://kit.fontawesome.com/bcad5a07b6.js"
+      crossorigin="anonymous">
+    </script>
+    <link
+      rel="icon"
+      type="image/svg"
+      sizes="16x16"
+      href="./images/restaurants/logo_ohmyfood.svg"/>
+    <title>Ohmyfood</title>
+  </head>
 
-        <head>
-            <meta charset="utf-8" />
-            <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-            <meta name="description" content="OhMyFood, entreprise de commande de repas en ligne, 
-                    nous proposons à nos clients les menus d'exception de restaurants gastronomiques" />
-            <meta name="author" content="Narjis Cotonnec" />
-            <link rel="stylesheet" href="./sass/style.css" type="text/css">
-            <link rel="preconnect" href="https://fonts.gstatic.com">
-            <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;900&display=swap" rel="stylesheet">
-            <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
-            <link rel="stylesheet" href="./font/font-awesome-4.7.0/css/font-awesome.min.css">
-            <script src="https://kit.fontawesome.com/bcad5a07b6.js" crossorigin="anonymous"></script>
-            <link rel="icon" type="image/svg" sizes="16x16" href="./images/restaurants/logo_ohmyfood.svg">
-                <title>
-                    Ohmyfood
-                </title>
-        </head>
+  <body>
+    <!-- Loader -->
+    <div class="loader" id="hidden">
+      <span class="lettre">O</span>
+      <span class="lettre">H</span>
+      <span class="lettre">M</span>
+      <span class="lettre">Y</span>
+      <span class="lettre">F</span>
+      <span class="lettre">O</span>
+      <span class="lettre">O</span>
+      <span class="lettre">D</span>
+      <div class="spinner"></div>
+    </div>
 
+    <header>
+      <a href="#" class="welcome">
+        <img src="./images/restaurants/logo_ohmyfood.svg" alt="logo Ohmyfood" />
+      </a>
+    </header>
 
-        <body>
+    <div class="introduction">
+      <div class="introduction__search-box">
+        <i class="fa fa-map-marker"></i>
+        <input
+          class="search-txt"
+          type="text"
+          name="search"
+          placeholder="Ville, Quartier"
+        />
+      </div>
+    </div>
 
-            <!-- Loader -->
-            <div class="loader" id="hidden">
-                <span class="lettre">O</span>
-                <span class="lettre">H</span>
-                <span class="lettre">M</span>
-                <span class="lettre">Y</span>
-                <span class="lettre">F</span>
-                <span class="lettre">O</span>
-                <span class="lettre">O</span>
-                <span class="lettre">D</span>
-                <div class="spinner"></div>
+    <div class="introduction__present">
+      <h1>Réservez le menu qui vous convient</h1>
+      <p>Découvrez des restaurants d'exception, selectionnés par nos soins</p>
+      <button class="bouton__explore">Explorer nos restaurants</button>
+    </div>
+
+    <nav>
+      <h3>Fonctionnement</h3>
+
+      <ul>
+        <li class="bouton__nav">
+          <div class="bouton__round">1</div>
+          <i class="fa fa-mobile"></i>
+          Choisissez un restaurant
+        </li>
+
+        <li class="bouton__nav">
+          <div class="bouton__round">2</div>
+          <i class="fa fa-list"></i>
+          Composez votre menu
+        </li>
+
+        <li class="bouton__nav">
+          <div class="bouton__round">3</div>
+          <i class="fas fa-store"></i>
+          Dégustez au restaurant
+        </li>
+      </ul>
+    </nav>
+
+    <div class="primary-content">
+      <h3>Restaurants</h3>
+
+      <div class="primary-content__restaurants">
+        <article>
+          <a href="menu1.html">
+            <img
+              src="./images/restaurants/restaurant_palette.jpg"
+              alt="Assiette garnie sur table de restaurant, menu et verre à pied"/>
+            <span class="primary-content__new"> Nouveau </span>
+            <div class="primary-content__info">
+              <h4>La Palette Du Goût</h4>
+              <p>Ménilmontant</p>
+              <div class="heart">
+                <span class="heart__checked">
+                  <i class="fas fa-heart fa-2x"></i>
+                </span>
+                <span class="heart__unchecked">
+                  <i class="far fa-heart fa-2x"></i>
+                </span>
+              </div>
             </div>
+          </a>
+        </article>
 
-
-            <header>
-                <a href="#" class="welcome">
-                    <img src="./images/restaurants/logo_ohmyfood.svg" alt="logo Ohmyfood" />
-                </a>
-            </header>
-
-            <div class="introduction">
-                <div class="introduction__search-box">
-                    <i class="fa fa-map-marker"></i>
-                        <input class="search-txt" type="text" name="search" placeholder="Ville, Quartier" />
-                </div>
+        <article>
+          <a href="menu2.html">
+            <img
+              src="./images/restaurants/restaurant_note.jpg"
+              alt="Assiette garnie sur table de restaurant, menu et verre à pied"/>
+            <span class="primary-content__new"> Nouveau </span>
+            <div class="primary-content__info">
+              <h4>La Note Enchantée</h4>
+              <p>Charonne</p>
+              <div class="heart">
+                <span class="heart__checked">
+                  <i class="fas fa-heart fa-2x"></i>
+                </span>
+                <span class="heart__unchecked">
+                  <i class="far fa-heart fa-2x"></i>
+                </span>
+              </div>
             </div>
+          </a>
+        </article>
 
-            <div class="introduction__present">
-                <h1>
-                    Réservez le menu qui vous convient
-                </h1>
-                <p>
-                    Découvrez des restaurants d'exception, selectionnés par nos soins
-                </p>
-                <button class="bouton__explore">
-                    Explorer nos restaurants
-                </button>
+        <article>
+          <a href="menu3.html">
+            <img
+              src="./images/restaurants/restaurant_française.jpg"
+              alt="Assiette garnie sur table de restaurant"/>
+            <div class="primary-content__info">
+              <h4>À La Française</h4>
+              <p>Cité Rouge</p>
+              <div class="heart">
+                <span class="heart__checked">
+                  <i class="fas fa-heart fa-2x"></i>
+                </span>
+                <span class="heart__unchecked">
+                  <i class="far fa-heart fa-2x"></i>
+                </span>
+              </div>
             </div>
+          </a>
+        </article>
 
-            <nav>
-                <h3>Fonctionnement</h3>
-
-                <ul>
-                    <li class="bouton__nav">
-                        <div class="bouton__round">
-                            1
-                        </div>
-                            <i class="fa fa-mobile"></i>
-                                Choisissez un restaurant
-                    </li>
-
-                    <li class="bouton__nav">
-                        <div class="bouton__round">
-                            2
-                        </div>
-                            <i class="fa fa-list"></i>
-                                Composez votre menu
-                    </li>
-
-                    <li class="bouton__nav">
-                        <div class="bouton__round">
-                            3
-                        </div>
-                            <i class="fas fa-store"></i>
-                                Dégustez au restaurant
-                    </li>
-                </ul>
-            </nav>
-
-            <div class="primary-content">
-                <h3>
-                    Restaurants
-                </h3>
-
-                <div class="primary-content__restaurants">
-                    <article>
-                        <a href="menu1.html">
-                            <img src="./images/restaurants/restaurant_palette.jpg"
-                                alt="Assiette garnie sur table de restaurant, menu et verre à pied" />
-                                    <span class="primary-content__new">
-                                        Nouveau
-                                    </span>
-                                        <div class="primary-content__info">
-                                            <h4>
-                                                La Palette Du Goût
-                                            </h4>
-                                                <p>
-                                                    Ménilmontant
-                                                </p>
-                                                    <div class="heart">
-                                                        <span class="heart__checked">
-                                                            <i class="fas fa-heart fa-2x"></i>
-                                                        </span>
-                                                        <span class="heart__unchecked">
-                                                            <i class="far fa-heart fa-2x"></i>
-                                                        </span>
-                                                    </div>
-                                        </div>
-                        </a>
-                    </article>
-
-                    <article>
-                        <a href="menu2.html">
-                            <img src="./images/restaurants/restaurant_note.jpg"
-                                alt="Assiette garnie sur table de restaurant, menu et verre à pied">
-                                    <span class="primary-content__new">
-                                        Nouveau
-                                    </span>
-                                        <div class="primary-content__info">
-                                            <h4>
-                                                La Note Enchantée
-                                            </h4>
-                                                <p>
-                                                    Charonne
-                                                </p>
-                                                    <div class="heart">
-                                                        <span class="heart__checked">
-                                                            <i class="fas fa-heart fa-2x"></i>
-                                                        </span>
-                                                        <span class="heart__unchecked">
-                                                            <i class="far fa-heart fa-2x"></i>
-                                                        </span>
-                                                    </div>
-                                        </div>
-                        </a>
-                    </article>
-
-                    <article>
-                        <a href="menu3.html">
-                            <img src="./images/restaurants/restaurant_française.jpg"
-                                alt="Assiette garnie sur table de restaurant">
-                                    <div class="primary-content__info">
-                                        <h4>
-                                            À La Française
-                                        </h4>
-                                            <p>
-                                                Cité Rouge
-                                            </p>
-                                                <div class="heart">
-                                                    <span class="heart__checked">
-                                                        <i class="fas fa-heart fa-2x"></i>
-                                                    </span>
-                                                    <span class="heart__unchecked">
-                                                        <i class="far fa-heart fa-2x"></i>
-                                                    </span>
-                                                </div>
-                                    </div>
-                        </a>
-                    </article>
-
-                    <article>
-                        <a href="menu4.html">
-                            <img src="./images/restaurants/restaurant_délice.jpg" alt="Plats garnis sur table de restaurant">
-                                    <div class="primary-content__info">
-                                        <h4>
-                                            Le Délice Des Sens
-                                        </h4>
-                                            <p>
-                                                Folie-Méricourt
-                                            </p>
-                                                <div class="heart">
-                                                    <span class="heart__checked">
-                                                        <i class="fas fa-heart fa-2x"></i>
-                                                    </span>
-                                                    <span class="heart__unchecked">
-                                                        <i class="far fa-heart fa-2x"></i>
-                                                    </span>
-                                                </div>
-                                    </div>
-                        </a>
-                    </article>
-                </div>
+        <article>
+          <a href="menu4.html">
+            <img
+              src="./images/restaurants/restaurant_délice.jpg"
+              alt="Plats garnis sur table de restaurant"/>
+            <div class="primary-content__info">
+              <h4>Le Délice Des Sens</h4>
+              <p>Folie-Méricourt</p>
+              <div class="heart">
+                <span class="heart__checked">
+                  <i class="fas fa-heart fa-2x"></i>
+                </span>
+                <span class="heart__unchecked">
+                  <i class="far fa-heart fa-2x"></i>
+                </span>
+              </div>
             </div>
+          </a>
+        </article>
+      </div>
 
-            <footer>
-                <h2>
-                    ohmyfood
-                </h2>
+    </div>
 
-                    <ul class="fa-ul">
-                        <li>
-                            <i class="fa-li fa fa-cutlery" aria-hidden="true"></i>
-                                Proposer un restaurant
-                        </li>
-                        <li>
-                            <i class="fa-li fas fa-hands-helping" aria-hidden="true"></i>
-                                Devenir partenaire
-                        </li>
-                        <li>
-                            <i class="fa-li fas fa-file-signature" aria-hidden="true"></i>
-                                Mentions légales
-                        <li>
-                            <i class="fa-li fa fa-envelope" aria-hidden="true"></i>
-                                <a href="mailto:hello@openclassrooms.com">
-                                    Contact
-                                </a>
-                        </li>
-                    </ul>
-            </footer>
+    <footer>
+      <h2>ohmyfood</h2>
 
-        </body>
+      <ul class="fa-ul">
+        <li>
+          <i class="fa-li fa fa-cutlery" aria-hidden="true"></i>
+          Proposer un restaurant
+        </li>
+        <li>
+          <i class="fa-li fas fa-hands-helping" aria-hidden="true"></i>
+          Devenir partenaire
+        </li>
+        <li>
+          <i class="fa-li fas fa-file-signature" aria-hidden="true"></i>
+          Mentions légales
+        </li>
 
-    </html>
+        <li>
+          <i class="fa-li fa fa-envelope" aria-hidden="true"></i>
+          <a href="mailto:hello@openclassrooms.com"> Contact </a>
+        </li>
+      </ul>
+    </footer>
+    
+  </body>
+</html>
